# pbmpgfx

./: CMakeLists.txt  README  bitmap.c  edge.c  inp1.txt  inp_reddit.txt  inp_test.txt  inp_triangle.txt
